# adns

./: Cargo.toml  Dockerfile  README.md  cargo_publish.sh  publish.sh
adns-client/: Cargo.toml
adns-client/src/: lib.rs
adns-proto/: Cargo.toml
adns-proto/src/: context.rs  header.rs  lib.rs  maybe_concat.rs  name.rs  packet.rs  question.rs  record.rs  test_data.rs  tsig.rs
adns-proto/src/types/: data.rs  data_parser.rs  mod.rs
adns-server/: Cargo.toml
adns-server/migrations/: V1__init.sql
adns-server/src/: config.rs  lib.rs  main.rs  metrics.rs
adns-server/src/db/: mod.rs  notify.rs  zone.rs
adns-server/src/server/: mod.rs  respond.rs  respond_update.rs
adns-server/src/zone_provider/: dynfile.rs  file.rs  merge.rs  mod.rs  nsupdate_test  static_provider.rs  test_zone.yaml  test_zone_dyn.yaml
adns-zone/: Cargo.toml
adns-zone/src/: lib.rs  updates.rs
examples/config/: config.yaml  config_cdb.yaml  config_psql.yaml
examples/k8s/: adns.yaml  externaldns.yaml  zone.yaml
examples/zone/: zone.yaml
