[package]
name = "adns-client"
version = "0.1.1"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/protryon/adns"
description = "ADNS Client Library"
keywords = [ "dns" ]
readme = "../README.md"

[features]

[dependencies]
adns-proto = { "path" = "../adns-proto", version = "0.1" }
tokio = { "version" = "1", features = ["full"] }
thiserror = "1.0"
rand = "0.8"