[package]
name = "adns-server"
version = "0.1.0"
edition = "2021"
authors = ["Protryon <max.bruce12@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/protryon/adns"
description = "ADNS Server Library & Binary"
keywords = [ "dns" ]
readme = "../README.md"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "./src/main.rs"
name = "adns-server"

[features]
default = ["file_zone"]
file_zone = ["notify"]

[dependencies]
log = "0.4"
adns-proto = { "path" = "../adns-proto", version = "0.1" }
adns-zone = { "path" = "../adns-zone", version = "0.1" }
tokio = { "version" = "1", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
arc-swap = "1.6"
futures = "0.3"
hex = "0.4"
serde_yaml = { version = "0.8" }
notify = { version = "5.1", optional = true }
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.10.0"
prometheus = "0.13.3"
prometheus_exporter = "0.8"
lazy_static = "1.4"
defer-lite = "1.0.0"

[dev-dependencies]
